# gank-interview

./: .gitignore  PROJECT_PLAN.md  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: .cta.json  package-lock.json  package.json
